--- a/Case Converter/task/src/css/main.css
+++ b/Case Converter/task/src/css/main.css
@@ -1,11 +1,11 @@
+.container {
+    flex-direction: column;
+    display: flex;
+}
+
 .title {
     font-weight: bold;
     margin: 1.5vmin 0;
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
 }
 
 .textarea {
@@ -16,10 +16,10 @@
     margin: 1.5vmin 0;
 }
 
-button {
+.button {
     background-color: lightsalmon;
-    height: 3vmin;
-    min-height: 3vmin;
     border: none;
     border-radius: 0.5vmin;
+    height: 3vmin;
+    min-height: 3vmin;
 }
